Updated font and styling on front end projects

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -29,6 +29,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="../style-ux.css" />
   </head>
@@ -86,7 +92,7 @@
       </div>
       <div class="project-overview-section">
         <div class="row">
-          <h2 class="project-overview-title">Project Overview</h2>
+          <h2 class="all-caps-title">Project Overview</h2>
           <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="p-3">
               <h4>The problem</h4>
@@ -143,7 +149,9 @@
       <div class="understand-user-section">
         <div class="row">
           <div class="col-sm">
-            <h2 class="understand-user-title">Understanding the user</h2>
+            <h2 class="understand-user-title text-italic">
+              Understanding the user
+            </h2>
             <p>
               I planned out questions, conducted interviews and created empathy
               maps to understand the user’s needs and target a good user flow. A
@@ -160,7 +168,7 @@
         </div>
         <div class="pain-points">
           <div class="row">
-            <h2 class="mb-4">User pain points</h2>
+            <h2 class="mb-4 all-caps-title">User pain points</h2>
             <div class="col-md-4 pain-point-individual">
               <h4 class="mb-3 text-center">1. Time</h4>
               <p class="p-3 text-center">
@@ -187,7 +195,7 @@
       </div>
       <div class="persona-section">
         <div class="row">
-          <h2 class="mb-4">Persona & Problem statement</h2>
+          <h2 class="mb-4 all-caps-title">Persona & Problem statement</h2>
           <p>
             Kayla is a busy event planner who needs to do her shopping online
             because her sporadic work schedule allows her to shop around her
@@ -203,7 +211,7 @@
       </div>
       <div class="user-journey-map-section">
         <div class="row">
-          <h2 class="mb-4">User journey map</h2>
+          <h2 class="mb-4 all-caps-title">User journey map</h2>
           <p>
             Mapping Kayla’s journey revealed how helpful it would be for users
             to have a clothing app that had accurate sizing and an easy checkout
@@ -214,8 +222,8 @@
       </div>
       <div class="paper-wireframe-section">
         <div class="row">
-          <h2 class="mb-5">Starting the design</h2>
-          <h3>Paper wireframes</h3>
+          <h2 class="mb-5 text-italic">Starting the design</h2>
+          <h3 class="all-caps-title">Paper wireframes</h3>
           <p>
             I started drafting iterations of a homescreen page with user pain
             points in mind. The initial designs focused on a clean landing page
@@ -226,7 +234,7 @@
       </div>
       <div class="digital-wireframe-section">
         <div class="row">
-          <h3 class="mb-4">Digital wireframes</h3>
+          <h3 class="mb-4 all-caps-title">Digital wireframes</h3>
 
           <div class="col-md-6">
             <img
@@ -253,7 +261,7 @@
       </div>
       <div class="usability-study-findings">
         <div class="row">
-          <h3 class="usability-study-title">Usability Study Findings</h3>
+          <h3 class="all-caps-title">Usability Study Findings</h3>
           <p class="mb-4">
             Two rounds of usability studies were conducted and helped guide
             iterations moving forward. The first study assisted in design needs
@@ -289,8 +297,8 @@
       </div>
       <div class="refining-the-desgin">
         <div class="row">
-          <h2 class="mb-5">Refining the design</h2>
-          <h3 class="mb-4">Mockups</h3>
+          <h2 class="mb-5 text-italic">Refining the design</h2>
+          <h3 class="mb-4 all-caps-title">Mockups</h3>
           <div class="col-md">
             <img
               src="../img-ux/boutique-mockups-shopping.png"
@@ -307,7 +315,9 @@
       </div>
       <div class="mockups">
         <div class="row">
-          <h3 class="mb-4">Mockups 2 (after 2nd usability study)</h3>
+          <h3 class="mb-4 all-caps-title">
+            Mockups 2 (after 2nd usability study)
+          </h3>
           <div class="col-md">
             <img
               src="../img-ux/boutique-mockups-two.png"
@@ -324,7 +334,7 @@
       </div>
       <div class="accessibility-section">
         <div class="row">
-          <h3 class="mb-5">Accessibility considerations</h3>
+          <h3 class="mb-5 all-caps-title">Accessibility considerations</h3>
           <div class="col-md-4 accessibility-point">
             <h5 class="text-center">WCAG</h5>
             <p class="p-3 text-center">
@@ -350,13 +360,13 @@
       </div>
       <div class="refined-designs-section">
         <div class="row">
-          <h3 class="mb-3">Refined designs</h3>
+          <h3 class="mb-3 all-caps-title">Refined designs</h3>
           <img src="../img-ux/boutique-hifi-designs.png" class="img=fluid" />
         </div>
       </div>
       <div class="hifi-prototype">
         <div class="row">
-          <h3 class="mb-3">High-fidelity prototype</h3>
+          <h3 class="mb-3 all-caps-title">High-fidelity prototype</h3>
           <p>
             The final high-fidelity prototype is a lot cleaner and simpler for
             users to browse items, add to cart, and checkout.
@@ -373,10 +383,10 @@
         </div>
       </div>
       <div class="end-section">
-        <h2 class="going-forward">Going forward</h2>
+        <h2 class="going-forward text-italic">Going forward</h2>
         <div class="takeaways">
           <div class="row">
-            <h3 class="mb-4">Takeaways</h3>
+            <h3 class="mb-4 all-caps-title">Takeaways</h3>
             <div class="col-md-6 takeaway-paragraph">
               <h4>Impact</h4>
               <p>
@@ -406,7 +416,7 @@
         </div>
         <div class="next-steps">
           <div class="row">
-            <h3 class="mb-4">Next steps</h3>
+            <h3 class="mb-4 all-caps-title">Next steps</h3>
             <div class="col-md-6 takeaway-paragraph">
               <h4>1. Testing</h4>
               <p>
@@ -427,17 +437,35 @@
     </div>
     <footer class="footer-all">
       <div class="container text-center">
-        <span class="footer-link">
-          <a href="../projects/ux-one-boutique.html" class="active"
-            >BoutiqueApp</a
-          >
-        </span>
-        <span class="footer-link">
-          <a href="../projects/ux-two-cook.html">Carrots' Cooking App</a>
-        </span>
-        <span class="footer-link">
-          <a href="../projects/ux-three-pet.html">PetConnect Adoption</a>
-        </span>
+        <div class="row">
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-one-boutique.html" class="active"
+                >BOUTIQUEAPP</a
+              >
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-two-cook.html">CARROTS</a>
+            </span>
+          </div>
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-three-pet.html">PETCONNECT</a>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/frontend-dictionary.html">DICTIONARY</a>
+            </span>
+          </div>
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/frontend-weather.html">WEATHERAPP</a>
+            </span>
+          </div>
+        </div>
       </div>
     </footer>
     <footer class="footer-code">
