--- a/projects/ux-three-pet.html
+++ b/projects/ux-three-pet.html
@@ -29,6 +29,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="../style-ux.css" />
   </head>
@@ -86,7 +92,9 @@
       </div>
       <div class="project-overview-section">
         <div class="row">
-          <h2 class="project-overview-title">Project Overview</h2>
+          <h2 class="project-overview-title all-caps-title">
+            Project Overview
+          </h2>
           <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="p-3">
               <h4>The problem</h4>
@@ -142,7 +150,9 @@
       <div class="understand-user-section">
         <div class="row">
           <div class="col-sm">
-            <h2 class="understand-user-title">Understanding the user</h2>
+            <h2 class="understand-user-title text-italic">
+              Understanding the user
+            </h2>
             <p>
               I conducted user interviews and turned them into empathy maps to
               better understand the user and their needs. I discovered that many
@@ -156,7 +166,7 @@
         </div>
         <div class="pain-points">
           <div class="row">
-            <h2 class="mb-4">User pain points</h2>
+            <h2 class="mb-4 all-caps-title">User pain points</h2>
             <div class="col-sm-4 pain-point-individual">
               <h4 class="mb-3 text-center">1. Navigation</h4>
               <p class="p-3 text-center">
@@ -184,7 +194,7 @@
       </div>
       <div class="persona-section">
         <div class="row">
-          <h2 class="mb-4">Persona & Problem statement</h2>
+          <h2 class="mb-4 all-caps-title">Persona & Problem statement</h2>
           <p>
             Alison Smith is a web developer at a tech company who needs to
             browse pets available for adoption and plan visits ahead of time
@@ -201,7 +211,7 @@
       </div>
       <div class="user-journey-map-section">
         <div class="row">
-          <h2 class="mb-4">User journey map</h2>
+          <h2 class="mb-4 all-caps-title">User journey map</h2>
           <p>
             I created a user journey map on Alison to locate any pain points,
             areas of interest, and improvement opportunities.
@@ -211,8 +221,8 @@
       </div>
       <div class="paper-wireframe-section">
         <div class="row mb-5">
-          <h2 class="mb-4">Responsive Design</h2>
-          <h3 class="mb-3">Sitemap</h3>
+          <h2 class="mb-4 text-italic">Responsive Design</h2>
+          <h3 class="mb-3 all-caps-title">Sitemap</h3>
           <p>
             A cluttered landing page seemed to distract the user from browsing
             animals. I created a hierarchical structure so the home page had
@@ -228,8 +238,8 @@
           <img src="../img-ux/pet-sitemap.jpg" class="img-fluid mb-5" />
         </div>
         <div class="row mb-5">
-          <h2 class="mb-5">Starting the design</h2>
-          <h3 class="mb-4">Paper wireframes</h3>
+          <h2 class="mb-5 text-italic">Starting the design</h2>
+          <h3 class="mb-4 all-caps-title">Paper wireframes</h3>
           <p class="mb-4">
             I sketched paper wireframes keeping a simple navigation and a clean
             landing page in mind. I tried to keep anything that wasn’t a parent
@@ -249,7 +259,9 @@
           </div>
         </div>
         <div class="row">
-          <h3 class="mt-5 mb-4">Paper wireframe screen size variation</h3>
+          <h3 class="mt-5 mb-4 all-caps-title">
+            Paper wireframe screen size variation
+          </h3>
           <p class="mb-4">
             Then, I sketched out a responsive design for mobile users. Because
             of the limited space, the buttons, images, and text are kept even
@@ -263,7 +275,9 @@
       </div>
       <div class="digital-wireframe-section">
         <div class="row">
-          <h3 class="mb-4">Digital wireframe screen size variations</h3>
+          <h3 class="mb-4 all-caps-title">
+            Digital wireframe screen size variations
+          </h3>
           <p class="mb-5">
             I started drafting the wireframes for the desktop version first, and
             used the sitemap to organize the information. After that was
@@ -303,7 +317,7 @@
       </div>
       <div class="pet-lofi-wireframe">
         <div class="row">
-          <h2 class="mb-4">Prototype</h2>
+          <h2 class="mb-4 all-caps-title">Prototype</h2>
           <p class="mb-4">
             In preparation for the usability study, I drafted up a prototype for
             the website mockups
@@ -315,7 +329,9 @@
       </div>
       <div class="usability-study-findings">
         <div class="row">
-          <h3 class="usability-study-title">Usability Study Findings</h3>
+          <h3 class="usability-study-title all-caps-title">
+            Usability Study Findings
+          </h3>
           <p class="mb-4">
             An unmoderated usability study was conducted with 5 participants to
             gain insight on what iterations need to be made moving forward.
@@ -348,8 +364,8 @@
       </div>
       <div class="refining-the-desgin">
         <div class="row">
-          <h2 class="mb-5">Refining the design</h2>
-          <h3 class="mb-4">Mockups</h3>
+          <h2 class="mb-5 text-italic">Refining the design</h2>
+          <h3 class="mb-4 all-caps-title">Mockups</h3>
           <div class="col-sm">
             <img src="../img-ux/pet-mockups.png" class="img-fluid mb-3" />
             <p class="text-center">
@@ -362,7 +378,7 @@
       </div>
       <div class="mockups">
         <div class="row">
-          <h3 class="mb-4">Laptop mockups (original size)</h3>
+          <h3 class="mb-4 all-caps-title">Laptop mockups (original size)</h3>
           <div class="col-sm-6">
             <img
               src="../img-ux/pet-laptop-mockup-one.png"
@@ -393,7 +409,7 @@
       </div>
       <div class="mobile-mockups">
         <div class="row mb-2">
-          <h3 class="mb-4">Mobile mockups (size variations)</h3>
+          <h3 class="mb-4 all-caps-title">Mobile mockups (size variations)</h3>
           <div class="col-sm-4">
             <img
               src="../img-ux/pet-mobile-mockup-one.png"
@@ -436,8 +452,10 @@
       </div>
       <div class="hifi-prototype">
         <div class="row mb-5">
-          <h2 class="mt-5">High-fidelity prototype</h2>
-          <h3 class="mb-4 mt-5">Laptop high-fidelity prototype</h3>
+          <h2 class="mt-5 text-italic">High-fidelity prototype</h2>
+          <h3 class="mb-4 mt-5 all-caps-title">
+            Laptop high-fidelity prototype
+          </h3>
           <p>
             View laptop high-fidelity prototype
             <a
@@ -454,7 +472,9 @@
           </div>
         </div>
         <div class="row">
-          <h3 class="mb-4 mt-5">Mobile high-fidelity prototype</h3>
+          <h3 class="mb-4 mt-5 all-caps-title">
+            Mobile high-fidelity prototype
+          </h3>
           <p>
             View mobile high-fidelity prototype
             <a
@@ -473,7 +493,7 @@
       </div>
       <div class="accessibility-section">
         <div class="row">
-          <h3 class="mb-5">Accessibility considerations</h3>
+          <h3 class="mb-5 all-caps-title">Accessibility considerations</h3>
           <div class="col-sm-4 accessibility-point">
             <h5 class="text-center">Visual Hierarchy</h5>
             <p class="p-3 text-center">
@@ -498,10 +518,10 @@
       </div>
 
       <div class="end-section">
-        <h2 class="going-forward">Going forward</h2>
+        <h2 class="going-forward text-italic">Going forward</h2>
         <div class="takeaways">
           <div class="row">
-            <h3>Takeaways</h3>
+            <h3 class="all-caps-title">Takeaways</h3>
             <div class="col-sm-6 takeaway-paragraph">
               <h4>Impact</h4>
               <p>
@@ -523,7 +543,7 @@
         </div>
         <div class="next-steps">
           <div class="row">
-            <h3>Next steps</h3>
+            <h3 class="all-caps-title">Next steps</h3>
             <div class="col-sm-4 takeaway-paragraph">
               <h4>1. Survey</h4>
               <p>
@@ -550,17 +570,35 @@
     </div>
     <footer class="footer-all">
       <div class="container text-center">
-        <span class="footer-link">
-          <a href="../projects/ux-one-boutique.html">BoutiqueApp</a>
-        </span>
-        <span class="footer-link">
-          <a href="../projects/ux-two-cook.html">Carrots' Cooking App</a>
-        </span>
-        <span class="footer-link">
-          <a href="../projects/ux-three-pet.html" class="active"
-            >PetConnect Adoption</a
-          >
-        </span>
+        <div class="row">
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-one-boutique.html">BOUTIQUEAPP</a>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-two-cook.html">CARROTS</a>
+            </span>
+          </div>
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-three-pet.html" class="active"
+                >PETCONNECT</a
+              >
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/frontend-dictionary.html">DICTIONARY</a>
+            </span>
+          </div>
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/frontend-weather.html">WEATHERAPP</a>
+            </span>
+          </div>
+        </div>
       </div>
     </footer>
     <footer class="footer-code">
