--- a/projects/ux-two-cook.html
+++ b/projects/ux-two-cook.html
@@ -29,6 +29,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="../style-ux.css" />
   </head>
@@ -86,7 +92,9 @@
       </div>
       <div class="project-overview-section">
         <div class="row">
-          <h2 class="project-overview-title">Project Overview</h2>
+          <h2 class="project-overview-title all-caps-title">
+            Project Overview
+          </h2>
           <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="p-3">
               <h4>The problem</h4>
@@ -150,7 +158,9 @@
       <div class="understand-user-section">
         <div class="row">
           <div class="col-sm">
-            <h2 class="understand-user-title">Understanding the user</h2>
+            <h2 class="understand-user-title text-italic">
+              Understanding the user
+            </h2>
             <p>
               I used Carrots’ data on cooking apps and observations gained from
               my competitive audit to develop interview questions. During the
@@ -165,7 +175,7 @@
         </div>
         <div class="pain-points">
           <div class="row">
-            <h2 class="mb-4">User pain points</h2>
+            <h2 class="mb-4 all-caps-title">User pain points</h2>
             <div class="col-sm-4 pain-point-individual">
               <h4 class="mb-3 text-center">1. Lack of Media</h4>
               <p class="p-3 text-center">
@@ -193,7 +203,7 @@
       </div>
       <div class="persona-section">
         <div class="row">
-          <h2 class="mb-4">Persona & Problem statement</h2>
+          <h2 class="mb-4 all-caps-title">Persona & Problem statement</h2>
           <p>
             Royce Chen is a middle-school student who enjoys cooking, who needs
             to access healthy recipes with quick & easy step-by-step
@@ -210,7 +220,7 @@
       </div>
       <div class="user-journey-map-section">
         <div class="row">
-          <h2 class="mb-4">User journey map</h2>
+          <h2 class="mb-4 all-caps-title">User journey map</h2>
           <p>
             Mapping Royce's journey revealed how helpful it would be to have
             images and videos for each step, as well as providing cues on the
@@ -221,8 +231,8 @@
       </div>
       <div class="paper-wireframe-section">
         <div class="row">
-          <h2 class="mb-5">Starting the design</h2>
-          <h3>Paper wireframes</h3>
+          <h2 class="mb-5 text-italic">Starting the design</h2>
+          <h3 class="all-caps-title">Paper wireframes</h3>
           <p>
             I used a quick ideation process to sketch ideas for a dedicated
             mobile app. My focus was kept on creating a simple app, while
@@ -234,7 +244,7 @@
       </div>
       <div class="digital-wireframe-section">
         <div class="row">
-          <h3 class="mb-4">Digital wireframes</h3>
+          <h3 class="mb-4 all-caps-title">Digital wireframes</h3>
 
           <div class="col-sm-6">
             <img
@@ -263,7 +273,9 @@
       </div>
       <div class="usability-study-findings">
         <div class="row">
-          <h3 class="usability-study-title">Usability Study Findings</h3>
+          <h3 class="usability-study-title all-caps-title">
+            Usability Study Findings
+          </h3>
           <p class="mb-4">
             The usability study directed the design needs from wireframes to
             mockups, and provided a lot of insight of what users wanted to see
@@ -295,8 +307,8 @@
       </div>
       <div class="refining-the-desgin">
         <div class="row">
-          <h2 class="mb-5">Refining the design</h2>
-          <h3 class="mb-4">Mockups</h3>
+          <h2 class="mb-5 text-italic">Refining the design</h2>
+          <h3 class="mb-4 all-caps-title">Mockups</h3>
           <div class="col-sm">
             <img src="../img-ux/carrots-mockup.png" class="img-fluid mb-3" />
             <p class="text-center">
@@ -327,7 +339,7 @@
       </div>
       <div class="accessibility-section">
         <div class="row">
-          <h3 class="mb-5">Accessibility considerations</h3>
+          <h3 class="mb-5 all-caps-title">Accessibility considerations</h3>
           <div class="col-sm-4 accessibility-point">
             <h5 class="text-center">WCAG</h5>
             <p class="p-3 text-center">
@@ -353,13 +365,13 @@
       </div>
       <div class="refined-designs-section">
         <div class="row">
-          <h3 class="mb-3">Refined designs</h3>
+          <h3 class="mb-3 all-caps-title">Refined designs</h3>
           <img src="../img-ux/carrots-refined-designs.png" class="img=fluid" />
         </div>
       </div>
       <div class="hifi-prototype">
         <div class="row">
-          <h3 class="mb-3">High-fidelity prototype</h3>
+          <h3 class="mb-3 all-caps-title">High-fidelity prototype</h3>
           <p>
             The final high-fidelity prototype is a lot cleaner and simpler for
             users to browse items, add to cart, and checkout.
@@ -377,8 +389,8 @@
       </div>
       <div class="responsive-design">
         <div class="row">
-          <h2 class="mb-4">Responsive Design</h2>
-          <h3 class="mb-3">Sitemap</h3>
+          <h2 class="mb-4 text-italic">Responsive Design</h2>
+          <h3 class="mb-3 all-caps-title">Sitemap</h3>
           <p>
             I used the original dedicated mobile app structure to help guide the
             sitemap for the website application. The structure generally
@@ -390,7 +402,7 @@
           <img src="../img-ux/carrots-sitemap.png" class="img-fluid mb-5" />
         </div>
         <div class="row">
-          <h3 class="mb-3">Responsive designs</h3>
+          <h3 class="mb-3 all-caps-title">Responsive designs</h3>
           <p>
             Although I had more space to play with for the tablet and desktop
             designs, I wanted to keep negative space around it so images, text
@@ -438,10 +450,10 @@
         </div>
       </div>
       <div class="end-section">
-        <h2 class="going-forward">Going forward</h2>
+        <h2 class="going-forward text-italic">Going forward</h2>
         <div class="takeaways">
           <div class="row">
-            <h3>Takeaways</h3>
+            <h3 class="all-caps-title">Takeaways</h3>
             <div class="col-sm-6 takeaway-paragraph">
               <h4>Impact</h4>
               <p>
@@ -465,7 +477,7 @@
         </div>
         <div class="next-steps">
           <div class="row">
-            <h3>Next steps</h3>
+            <h3 class="all-caps-title">Next steps</h3>
             <div class="col-sm-4 takeaway-paragraph">
               <h4>1. Survey</h4>
               <p>
@@ -492,17 +504,35 @@
     </div>
     <footer class="footer-all">
       <div class="container text-center">
-        <span class="footer-link">
-          <a href="../projects/ux-one-boutique.html">BoutiqueApp</a>
-        </span>
-        <span class="footer-link">
-          <a href="../projects/ux-two-cook.html" class="active"
-            >Carrots' Cooking App</a
-          >
-        </span>
-        <span class="footer-link">
-          <a href="../projects/ux-three-pet.html">PetConnect Adoption</a>
-        </span>
+        <div class="row">
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-one-boutique.html">BOUTIQUEAPP</a>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-two-cook.html" class="active">CARROTS</a>
+            </span>
+          </div>
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/ux-three-pet.html">PETCONNECT</a>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/frontend-dictionary.html">DICTIONARY</a>
+            </span>
+          </div>
+          <div class="col-lg-2 col-md-4 mb-2">
+            <span class="footer-link">
+              <a href="../projects/frontend-weather.html" class="active"
+                >WEATHERAPP</a
+              >
+            </span>
+          </div>
+        </div>
       </div>
     </footer>
     <footer class="footer-code">
