Updated CSS on all projects

--- a/projects/frontend-dictionary.html
+++ b/projects/frontend-dictionary.html
@@ -74,11 +74,10 @@
             <a href="https://loving-hermann-fdb059.netlify.app/" class="dictionary-button d-none d-sm-block d-md-block d-lg-block d-xl-block" target="_blank">GO TO PROJECT</a>
             <div class="col-lg-12">
               <h1 class="dictionary-title">DICTIONARY APP</h1>
-              
               <h3 class="dictionary-tools">React, JS, HTML, CSS, Bootstrap</h2>
               <p class="dictionary-summary">This project is designed with React and uses a Dictionary API. The layout is intended to be kept simple, with visual hierarchy of characteristics commonly found in a dictionary app.</p>
               <div>
-                <a href="https://loving-hermann-fdb059.netlify.app/" class="dictionary-button-two d-block d-sm-none" target="_blank">GO TO PROJECT</a>
+                <a href="https://loving-hermann-fdb059.netlify.app/" class="dictionary-button-two d-block d-sm-none d-md-none" target="_blank">GO TO PROJECT</a>
               </div>     
             </div>
           </div>
