--- a/projects/frontend-weather.html
+++ b/projects/frontend-weather.html
@@ -78,7 +78,7 @@
               <h3 class="dictionary-tools">React, JS, HTML, CSS, Flexbox, Bootstrap</h2>
               <p class="dictionary-summary">This project is designed with React and uses a weather API. Users can type in any city and receive a five-day forecast instantly.</p>
               <div>
-                <a href="https://loving-hermann-fdb059.netlify.app/" class="dictionary-button-two d-block d-sm-none" target="_blank">GO TO PROJECT</a>
+                <a href="https://loving-hermann-fdb059.netlify.app/" class="dictionary-button-two d-block d-sm-none d-md-none" target="_blank">GO TO PROJECT</a>
               </div>     
             </div>
           </div>
