--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -92,7 +92,9 @@
       </div>
       <div class="project-overview-section">
         <div class="row">
-          <h2 class="all-caps-title">Project Overview</h2>
+          <h2 class="project-overview-title all-caps-title">
+            Project Overview
+          </h2>
           <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="p-3">
               <h4>The problem</h4>
@@ -168,24 +170,26 @@
         </div>
         <div class="pain-points">
           <div class="row">
-            <h2 class="mb-4 all-caps-title">User pain points</h2>
+            <h2 class="mb-3 all-caps-title">User pain points</h2>
             <div class="col-md-4 pain-point-individual">
-              <h4 class="mb-3 text-center">1. Time</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">1. Time</h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Individuals did not want to spend a large amount of time
                 commuting to stores and browsing them in-person
               </p>
             </div>
             <div class="col-md-4 pain-point-individual">
-              <h4 class="mb-3 text-center">2. Size Accuracy</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">
+                2. Size Accuracy
+              </h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Digital platforms were not thorough with providing enough
                 material to determine accurate sizing
               </p>
             </div>
             <div class="col-md-4 pain-point-individual">
-              <h4 class="mb-3 text-center">3. Clutter</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">3. Clutter</h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Too much text and images spread out on a page were difficult to
                 browse on
               </p>
