--- a/projects/ux-three-pet.html
+++ b/projects/ux-three-pet.html
@@ -79,7 +79,8 @@
         <div class="col-sm-6">
           <div class="title-text">
             <h3 class="title-info case-study">Case Study:</h3>
-            <h1 class="title-info case-title">PETCONNECT</h1>
+            <h1 class="title-info case-title petconnect-title">PETCONNECT</h1>
+
             <p class="title-info case-desc">A pet adoption app</p>
           </div>
         </div>
@@ -168,23 +169,25 @@
           <div class="row">
             <h2 class="mb-4 all-caps-title">User pain points</h2>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">1. Navigation</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">1. Navigation</h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Pet adoption sites are often cluttered, unorganized and
                 difficult to navigate, causing frustration.
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">2. Lack of Content</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">
+                2. Lack of Content
+              </h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Users find sites don’t update the animals that are available,
                 are lacking media and info on animals, or are not shown at all
                 on websites, causing frustration in the lack of content.
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">3. Interaction</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">3. Interaction</h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Websites contain buttons and forms that are too small or don't
                 function well.
               </p>
@@ -521,7 +524,7 @@
         <h2 class="going-forward text-italic">Going forward</h2>
         <div class="takeaways">
           <div class="row">
-            <h3 class="all-caps-title">Takeaways</h3>
+            <h3 class="all-caps-title mb-3">Takeaways</h3>
             <div class="col-sm-6 takeaway-paragraph">
               <h4>Impact</h4>
               <p>
@@ -543,22 +546,22 @@
         </div>
         <div class="next-steps">
           <div class="row">
-            <h3 class="all-caps-title">Next steps</h3>
+            <h3 class="all-caps-title mb-3">Next steps</h3>
             <div class="col-sm-4 takeaway-paragraph">
-              <h4>1. Survey</h4>
+              <h4 class="pet-next-steps">1. Survey</h4>
               <p>
                 Short pop-up surveys at the end of confirmation pages for users
                 to rate and comment
               </p>
             </div>
             <div class="col-sm-4 takeaway-paragraph">
-              <h4>2. Usability Study</h4>
+              <h4 class="pet-next-steps">2. Usability Study</h4>
               <p>
                 Conduct a follow-up usability study on the new web page design
               </p>
             </div>
             <div class="col-sm-4 takeaway-paragraph">
-              <h4>3. Bugs/Improvements</h4>
+              <h4 class="pet-next-steps">3. Bugs/Improvements</h4>
               <p>
                 Look for improvements and come up with any additional features
                 that may be necessary
