--- a/projects/ux-two-cook.html
+++ b/projects/ux-two-cook.html
@@ -175,25 +175,29 @@
         </div>
         <div class="pain-points">
           <div class="row">
-            <h2 class="mb-4 all-caps-title">User pain points</h2>
+            <h2 class="mb-3 all-caps-title">User pain points</h2>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">1. Lack of Media</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">
+                1. Lack of Media
+              </h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Recipes often did not include enough photo and video content to
                 aide the step-by-step instruction
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">2. Gap in kids' age</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">
+                2. Gap in kids' age
+              </h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Platforms catered too closely to either kids aged 7-12, missing
                 the target in intermediate, high school, and college-level
                 students
               </p>
             </div>
             <div class="col-sm-4 pain-point-individual">
-              <h4 class="mb-3 text-center">3. Clutter</h4>
-              <p class="p-3 text-center">
+              <h4 class="mb-3 text-center pain-point-title">3. Clutter</h4>
+              <p class="p-3 text-center pain-point-paragraph">
                 Sites spoke too much of the history of the food, without
                 offering concise instructions on how to prepare them
               </p>
@@ -231,7 +235,7 @@
       </div>
       <div class="paper-wireframe-section">
         <div class="row">
-          <h2 class="mb-5 text-italic">Starting the design</h2>
+          <h2 class="mb-4 text-italic">Starting the design</h2>
           <h3 class="all-caps-title">Paper wireframes</h3>
           <p>
             I used a quick ideation process to sketch ideas for a dedicated
@@ -307,7 +311,7 @@
       </div>
       <div class="refining-the-desgin">
         <div class="row">
-          <h2 class="mb-5 text-italic">Refining the design</h2>
+          <h2 class="mb-4 text-italic">Refining the design</h2>
           <h3 class="mb-4 all-caps-title">Mockups</h3>
           <div class="col-sm">
             <img src="../img-ux/carrots-mockup.png" class="img-fluid mb-3" />
@@ -492,7 +496,7 @@
               </p>
             </div>
             <div class="col-sm-4 takeaway-paragraph">
-              <h4>2. Incentives</h4>
+              <h4>3. Incentives</h4>
               <p>
                 Include incentives (like grocery coupons) to keep users wanting
                 to cook (and use the app)
@@ -527,9 +531,7 @@
           </div>
           <div class="col-lg-2 col-md-4 mb-2">
             <span class="footer-link">
-              <a href="../projects/frontend-weather.html" class="active"
-                >WEATHERAPP</a
-              >
+              <a href="../projects/frontend-weather.html">WEATHERAPP</a>
             </span>
           </div>
         </div>
